Fixed a bug with a gray line on mobile

--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -1334,7 +1334,7 @@
                 xlg: 44,
                 lg: 44,
                 md: 30,
-                sm: 4,
+                sm: 0,
               )
             );
           }
